--- a/TopShelfCustomer/TopShelfCustomer/Views/LicenseView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/LicenseView.xaml
@@ -16,18 +16,21 @@
 
             <!-- Header (Label, App Icon, etc.) -->
             <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
-                     BackgroundColor="{StaticResource Accent}" Grid.Row="0" Padding="0, 0, 0, 50" >
+                     BackgroundColor="{StaticResource Accent}" Grid.Row="0" Padding="0, 0, 0, 40" >
                 <StackLayout Orientation="Vertical">
                     <ImageButton Source="back_orange.png" Command="{Binding OpenSettingsViewCommand}" HorizontalOptions="Start" Margin="10,40,0,0" HeightRequest="40"/>
-                    <Image Source="TopShelfAppLogo.png" HeightRequest="100"/>
-                    <Label Text="TopShelf" FontSize="30" FontFamily="Fira Mono" Margin="0, 20, 0, 0" HorizontalOptions="Center" TextColor="White" />
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="15">
+                        <Image Source="TopShelfAppLogo.png" HeightRequest="60"/>
+                        <Label Text="TopShelf" FontSize="30" FontFamily="{StaticResource MediumFont}" VerticalTextAlignment="Center" TextColor="White" />
+                    </StackLayout>
                 </StackLayout>
             </ContentView>
 
             <ScrollView Grid.Row="2" >
                 <StackLayout Orientation="Vertical">
                         <!-- Page Title Label -->
-                    <Label Text="License" FontSize="26" TextColor="White" Grid.Row="1" HorizontalOptions="CenterAndExpand" Margin="0, 30, 0, 0"/>
+                    <Label Text="License" FontSize="26" TextColor="White" Grid.Row="1"
+                           HorizontalOptions="CenterAndExpand" Margin="0, 30, 0, 0" FontFamily="{StaticResource MediumFont}"/>
 
                     <!-- MIT License Text -->
                     <ContentView x:Name="MIT_License" Padding="20,0,20,0">
@@ -36,12 +39,12 @@
                                 <Label.FormattedText>
                                     <FormattedString>
                                         <FormattedString.Spans>
-                                            <Span Text="MIT License" FontAttributes="Bold" />
+                                            <Span Text="MIT License" FontAttributes="Bold" FontFamily="{StaticResource MediumFont}"/>
                                         </FormattedString.Spans>
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
-                            <Label FontSize="14" TextColor="White">
+                            <Label FontSize="13" TextColor="White" FontFamily="{StaticResource NormalFont}">
                                 <Label.FormattedText>
                                     <FormattedString>
                                         <FormattedString.Spans>
@@ -51,7 +54,7 @@
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
-                            <Label FontSize="12" TextColor="White">
+                            <Label FontSize="13" TextColor="White" FontFamily="{StaticResource NormalFont}">
                                 <Label.FormattedText>
                                     <FormattedString>
                                         <FormattedString.Spans>
@@ -65,7 +68,7 @@
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
-                            <Label FontSize="12" TextColor="White">
+                            <Label FontSize="13" TextColor="White" FontFamily="{StaticResource NormalFont}">
                                 <Label.FormattedText>
                                     <FormattedString>
                                         <FormattedString.Spans>
@@ -75,7 +78,7 @@
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
-                            <Label FontSize="12" TextColor="White">
+                            <Label FontSize="13" TextColor="White" FontFamily="{StaticResource NormalFont}">
                                 <Label.FormattedText>
                                     <FormattedString>
                                         <FormattedString.Spans>
@@ -98,12 +101,12 @@
                         <StackLayout Orientation="Vertical" >
                             <ContentView>
                                 <StackLayout Orientation="Horizontal" Margin="20" Spacing="15">
-                                    <Label FontSize="14" TextColor="White">
+                                    <Label FontSize="14" TextColor="White" FontFamily="{StaticResource NormalFont}">
                                         <Label.FormattedText>
                                             <FormattedString>
                                                 <FormattedString.Spans>
                                                     <Span Text="All Icons used in " />
-                                                    <Span Text="TopShelf " FontAttributes="Bold" />
+                                                    <Span Text="TopShelf " FontFamily="{StaticResource MediumFont}" />
                                                     <Span Text="were provided by " />
                                                     <Span Text="www.icons8.com" TextDecorations="Underline">
                                                         <Span.GestureRecognizers>
@@ -114,7 +117,7 @@
                                             </FormattedString>
                                         </Label.FormattedText>
                                     </Label>
-                                    <Button Command="{Binding IconLinkCommand}" Text="Visit Icons8"
+                                    <Button Command="{Binding IconLinkCommand}" Text="Visit Icons8" FontFamily="{StaticResource NormalFont}"
                                             FontSize="14" BackgroundColor="{StaticResource Primary}"
                                             TextColor="Black" Padding="10" HeightRequest="30"/>
                                 </StackLayout>
