--- a/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/LoginPage.xaml
@@ -7,68 +7,88 @@
     <ContentPage.Content>
         <ScrollView>
             <Grid BackgroundColor="{StaticResource AccentLight}">
+
                 <!-- RowDefinitions -->
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <!-- Header Icon and Title -->
-                <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Grid.Row="0" Padding="0, 60, 0, 60" >
-                    <StackLayout Orientation="Vertical">
-                        <Image Source="TopShelfAppLogo.png" HeightRequest="128"/>
+                <!-- Header (Label, App Icon, etc.) -->
+                <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"
+                         BackgroundColor="{StaticResource Accent}" Grid.Row="0" Padding="0, 40, 0, 40" >
+                    <StackLayout Orientation="Vertical" Spacing="20">
+                        <Image Source="TopShelfAppLogo.png" HeightRequest="100"/>
+                        <Label Text="Log into TopShelf" FontSize="26" HorizontalOptions="Center" TextColor="White" FontFamily="{StaticResource MediumFont}"/>
                     </StackLayout>
                 </ContentView>
 
-                <!-- Username and Password Entries -->
-                <ContentView HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" Grid.Row="1" Padding="0, 30, 0, 20">
-                    <StackLayout Orientation="Vertical" Spacing="30">
-                        <Label Text="Log into TopShelf" FontSize="30" HorizontalOptions="Center" TextColor="White" Margin="0,0,0,20"/>
-                        <ContentView>
-                            <StackLayout Orientation="Horizontal">
-                                <Image Source="news_48.png" HeightRequest="64" />
-                                <Entry Placeholder="Username" TextColor="White" BackgroundColor="{StaticResource Accent}"
-                                       VerticalOptions="CenterAndExpand" HeightRequest="46" Text="{Binding EmailInput, Mode=TwoWay}"
-                                       PlaceholderColor="Gray" WidthRequest="260" Keyboard="Email"/>
-                            </StackLayout>
-                        </ContentView>
-                        <ContentView>
-                            <StackLayout Orientation="Horizontal">
-                                <Image Source="secure_letter_48.png" HeightRequest="64"  />
-                                <Entry IsPassword="True" Placeholder="Password" TextColor="White" BackgroundColor="{StaticResource Accent}"
-                                       VerticalOptions="CenterAndExpand" HeightRequest="46" Text="{Binding PasswordInput, Mode=TwoWay}"
-                                       PlaceholderColor="Gray" WidthRequest="260" Keyboard="Plain"/>
-                            </StackLayout>
-                        </ContentView>
+                <StackLayout Orientation="Vertical" Grid.Row="1" VerticalOptions="StartAndExpand">
+                    <!-- Username and Password Entries -->
+                    <ContentView HorizontalOptions="CenterAndExpand" Grid.Row="1" Padding="0, 60, 0, 20">
+                        <StackLayout Orientation="Vertical" Spacing="30" VerticalOptions="Center">
+                            <ContentView>
+                                <StackLayout Orientation="Horizontal">
+                                    <Image Source="news_48.png" HeightRequest="64" />
+                                    <Entry Placeholder="E-mail" TextColor="White" BackgroundColor="{StaticResource Accent}"
+                                           VerticalOptions="CenterAndExpand" HeightRequest="46" Text="{Binding EmailInput, Mode=TwoWay}"
+                                           FontFamily="{StaticResource NormalFont}" PlaceholderColor="Gray" WidthRequest="260" Keyboard="Email"/>
+                                </StackLayout>
+                            </ContentView>
+                            <ContentView>
+                                <StackLayout Orientation="Horizontal">
+                                    <Image Source="secure_letter_48.png" HeightRequest="64"  />
+                                    <Entry IsPassword="True" Placeholder="Password" TextColor="White" BackgroundColor="{StaticResource Accent}"
+                                           VerticalOptions="CenterAndExpand" HeightRequest="46" Text="{Binding PasswordInput, Mode=TwoWay}"
+                                           FontFamily="{StaticResource NormalFont}" PlaceholderColor="Gray" WidthRequest="260" Keyboard="Plain"/>
+                                </StackLayout>
+                            </ContentView>
 
-                        <!-- Error Message -->
-                        <Label Text="Incorrect username or password. Try again" IsVisible="{Binding IsErrorVisible}"
-                               FontAttributes="Bold" FontSize="16" TextColor="Red" HorizontalOptions="Center" />
-                    </StackLayout>
-                </ContentView>
+                            <!-- Error Message -->
+                            <Label Text="Incorrect username or password. Try again" IsVisible="{Binding IsErrorVisible}"
+                                   FontFamily="{StaticResource NormalFont}" FontSize="16" TextColor="Red" HorizontalOptions="Center" />
+                            <Label HorizontalOptions="Center" IsVisible="{Binding IsErrorVisible}" FontFamily="{StaticResource NormalFont}">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <FormattedString.Spans>
+                                            <Span Text="Forgot your password?" FontSize="16" TextColor="Red" TextDecorations="Underline">
+                                                <Span.GestureRecognizers>
+                                                    <TapGestureRecognizer Command="{Binding ForgotPasswordCommand}" />
+                                                </Span.GestureRecognizers>
+                                            </Span>
+                                        </FormattedString.Spans>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+                    </ContentView>
 
-                <!-- Login Button and Account Recovery -->
-                <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Grid.Row="2" Padding="0, 60, 0, 0">
-                    <StackLayout Orientation="Vertical" Spacing="10">
-                        <Button Command="{Binding LoginCommand}" BackgroundColor="#f15a22" WidthRequest="240" FontAttributes="Bold"
-                                HeightRequest="50" TextColor="Black"
-                                Text="Log In" Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Start"/>
-                        <Label HorizontalOptions="Center">
-                            <Label.FormattedText>
-                                <FormattedString>
-                                    <FormattedString.Spans>
-                                        <Span Text="Create an account" FontSize="18" TextColor="White" TextDecorations="Underline" FontAttributes="Bold">
-                                            <Span.GestureRecognizers>
-                                                <TapGestureRecognizer Command="{Binding CreateNewAccountCommand}" />
-                                            </Span.GestureRecognizers>
-                                        </Span>
-                                    </FormattedString.Spans>
-                                </FormattedString>
-                            </Label.FormattedText>
-                        </Label>
-                    </StackLayout>
-                </ContentView>
+                    <!-- Login Button and Account Recovery -->
+                    <ContentView HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Grid.Row="1" Padding="0, 60, 0, 0">
+                        <StackLayout Orientation="Vertical" Spacing="0">
+                            <Button Command="{Binding LoginCommand}" BackgroundColor="#f15a22" WidthRequest="240"
+                                    BorderColor="Black" BorderWidth="2"
+                                    HeightRequest="50" TextColor="White" FontFamily="{StaticResource MediumFont}"
+                                    Text="Log In" Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Start" FontSize="22"/>
+                            <Label Text="New to TopShelf?  " FontSize="18" FontFamily="{StaticResource NormalFont}"
+                                   TextColor="White" Margin="0, 25, 0, 5" HorizontalOptions="Center"/>
+                            <Label HorizontalOptions="Center">
+                                <Label.FormattedText>
+                                    <FormattedString>
+                                        <FormattedString.Spans>
+                                            <Span Text="Create an account" FontSize="18" TextColor="White"
+                                                  TextDecorations="Underline" FontFamily="{StaticResource MediumFont}">
+                                                <Span.GestureRecognizers>
+                                                    <TapGestureRecognizer Command="{Binding CreateNewAccountCommand}" />
+                                                </Span.GestureRecognizers>
+                                            </Span>
+                                        </FormattedString.Spans>
+                                    </FormattedString>
+                                </Label.FormattedText>
+                            </Label>
+                        </StackLayout>
+                    </ContentView>
+                </StackLayout>
             </Grid>
         </ScrollView>
     </ContentPage.Content>
