--- a/TopShelfCustomer/TopShelfCustomer/Views/ProfileSettingsPage.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/ProfileSettingsPage.xaml
@@ -14,15 +14,18 @@
             <!-- Profile Info Header -->
             <ContentView BackgroundColor="{StaticResource Accent}" Padding="0, 30, 0, 30" >
                 <StackLayout>
-                    <ImageButton Source="back_orange.png" Command="{Binding OpenSettingsPageCommand}" Margin="10,10,0,0" HorizontalOptions="Start" HeightRequest="40"/>
+                    <ImageButton Source="back_orange.png" Command="{Binding OpenSettingsPageCommand}"
+                                 Margin="10,10,0,0" HorizontalOptions="Start" HeightRequest="40"/>
                     <!-- Name and Portrait -->
                     <StackLayout Orientation="Vertical" Margin="20, 0, 20, 0" Grid.Row="0">
                         <!-- Profile Picture -->
-                        <Frame HorizontalOptions="Center" CornerRadius="42" WidthRequest="48" HeightRequest="48" HasShadow="True" BorderColor="{StaticResource Primary}">
+                        <Frame HorizontalOptions="Center" CornerRadius="34" WidthRequest="32" HeightRequest="32" HasShadow="True" BorderColor="{StaticResource Primary}">
                             <Image Source="portrait.png" />
                         </Frame>
                         <!-- User Name -->
-                        <Label Text="{Binding UserRealName}" HorizontalOptions="CenterAndExpand" VerticalOptions="Center" FontSize="30" TextColor="White"/>
+                        <Label Text="{Binding UserRealName}"
+                               HorizontalOptions="CenterAndExpand" FontFamily="{StaticResource NormalFont}"
+                               VerticalOptions="Center" FontSize="26" TextColor="White"/>
                     </StackLayout>
                 </StackLayout>
             </ContentView>
@@ -31,48 +34,48 @@
                 <ContentView Padding="0, 10, 0, 0" >
                     <StackLayout Orientation="Vertical">
                         <!-- Header Label -->
-                        <Label Text="Profile Settings" FontSize="26" TextColor="White"
+                        <Label Text="Profile Settings" FontSize="26" TextColor="White" FontFamily="{StaticResource NormalFont}"
                                HorizontalOptions="Center" VerticalOptions="Fill"
                                HeightRequest="40" Margin="0, 10, 0, 30"/>
 
                         <!-- Edit Username Setting -->
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="0,0,0,20" >
-                            <Label Text="Username" FontSize="20" TextColor="White"
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="20,0,0,20" >
+                            <Label Text="Full Name" FontSize="16" TextColor="White" FontFamily="{StaticResource NormalFont}"
                                    VerticalTextAlignment="Center" HeightRequest="40"
                                    HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
-                            <Entry Text="{Binding UserName}" IsReadOnly="True" HorizontalOptions="EndAndExpand"
-                                   HeightRequest="40" WidthRequest="240" Margin="10,0,30,0"
-                                   TextColor="White" BackgroundColor="{StaticResource Accent}" />
+                            <Entry Text="{Binding UserRealName}" IsReadOnly="True" HorizontalOptions="EndAndExpand" FontFamily="{StaticResource NormalFont}"
+                                   HeightRequest="46" WidthRequest="220" Margin="10,0,40,0" FontSize="15"
+                                   TextColor="Gray" BackgroundColor="{StaticResource Accent}" />
                         </StackLayout>
 
                         <!-- Edit Password Setting -->
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="0,0,0,20">
-                            <Label Text="Password" FontSize="20" TextColor="White"
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="20,0,0,20">
+                            <Label Text="Password" FontSize="16" TextColor="White" FontFamily="{StaticResource NormalFont}"
                                    VerticalTextAlignment="Center" HeightRequest="40"
                                    HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
                             <Entry Text="{Binding UserName}" IsReadOnly="True" IsPassword="True" HorizontalOptions="EndAndExpand"
-                                   HeightRequest="40" WidthRequest="240"
-                                   Margin="10,0,30,0" TextColor="White" BackgroundColor="{StaticResource Accent}" />
+                                   HeightRequest="46" WidthRequest="220" FontFamily="{StaticResource NormalFont}" FontSize="15"
+                                   Margin="10,0,40,0" TextColor="Gray" BackgroundColor="{StaticResource Accent}" />
                         </StackLayout>
 
                         <!-- Edit E-mail Setting -->
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="0,0,0,20">
-                            <Label Text="E-mail" FontSize="20" TextColor="White"
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="20,0,0,20">
+                            <Label Text="E-mail" FontSize="16" TextColor="White" FontFamily="{StaticResource NormalFont}"
                                    VerticalTextAlignment="Center" HeightRequest="40"
                                    HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
                             <Entry Text="{Binding UserEmail}" IsReadOnly="True" HorizontalOptions="EndAndExpand"
-                                   HeightRequest="40" WidthRequest="240"
-                                   Margin="10,0,30,0" TextColor="White" BackgroundColor="{StaticResource Accent}" />
+                                   HeightRequest="46" WidthRequest="220" FontFamily="{StaticResource NormalFont}" FontSize="15"
+                                   Margin="10,0,40,0" TextColor="Gray" BackgroundColor="{StaticResource Accent}" />
                         </StackLayout>
 
                         <!-- Edit Phone Number Setting -->
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="0,0,0,20">
-                            <Label Text="Phone" FontSize="20" TextColor="White"
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Margin="20,0,0,20">
+                            <Label Text="Phone" FontSize="16" TextColor="White" FontFamily="{StaticResource NormalFont}"
                                    VerticalTextAlignment="Center" HeightRequest="40"
                                    HorizontalOptions="StartAndExpand" Margin="20,0,0,0"/>
                             <Entry Text="{Binding PhoneNumber}" IsReadOnly="True" HorizontalOptions="EndAndExpand"
-                                   HeightRequest="40" WidthRequest="240"
-                                   Margin="10,0,30,0" TextColor="White" BackgroundColor="{StaticResource Accent}" />
+                                   HeightRequest="46" WidthRequest="220" FontFamily="{StaticResource NormalFont}" FontSize="15"
+                                   Margin="10,0,40,0" TextColor="Gray" BackgroundColor="{StaticResource Accent}" />
                         </StackLayout>
                     </StackLayout>
                 </ContentView>
